--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "ejs": "^3.1.10",
         "express": "^4.18.2",
+        "js-yaml": "^4.1.0",
         "uuid": "^11.0.3"
     }
 }
